--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -2,24 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALL About Me</title>
+    <title> WDD130 Home Page </title>
+    <link rel="stylesheet" href="styles/styles.css"/>
 </head>
 <body>
-    <h1>About Me</h1>
-    <img srcset="csiphoto2.jpg" alt="baseball picture of me" style="width: 11em;">
-    <img srcset="weddingphoto.jpg" alt="wedding picture of wife and myself" style="width: 14em;">
-    <h2>Bryton Armstrong</h2>
-    <h2>Trey</h2>
-    <p>Hello Everyone! I graduated from Rigby, ID and am a transfer student from CSI after having graduating with my Associates Degree.
-        Currently, I am working towards my Bachelor's Business Administration degree at BYU-I,my plummer's journeyman at CSI online, and working full-time in Jackson, WY (I'm just a little busy...).
-        I was a baseball player all through High School and was trying out for CSI's baseball team until I re-injured my knee and my hip. 
-        Fortunately, God's plan included meeting my wonderful wife in Twin Falls.
-        We were married in the Twin Falls Temple this last April and moved to Rexburg towards the end of May. 
-        I'm hoping to learn how to design my own website for any possible opportunities I might have in creating my own business in the future. 
-        I have been a member of the Church of Jesus Christ of Latter-Day-Saints my whole life and I went to Mendoza, Argentina & Tri-Cities, WA for my mission. 
-        My favorite scripture has to be Ether 12:27. 
-    </p>
+    <h1>Welcome to WDD130 Web Projects</h1>
+    <nav>
+        <a href="aboutme/index.html">About Me Page</a>
+        <a href="wwr/index.html">White Water Rafting Website</a>
+        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        <a href="positioning.html">Positioning Activity</a>
+        <a href="#">Personal Website</a>
+        <a href="#">Personal Siteplan</a>
+    </nav>
+    <p>Trey Armstrong - WDD130</p>
 </body>
 </html>
