--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,9 +9,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>Strong Dry Oar Rafting Site Plan</h1>
+    <h2>Trey Armstrong</h2>
+    <h2>WDD 130-2</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -19,11 +19,17 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>Our purpose is to produce quality trips and service to ensure life-time experiences for the whole family. Our trained instructors and guides will give your family
+        the safest and funnest river experience to offer. For more advanced rafters, there are Whitewater rafting tours that will provide an invigorating challenge.
+        In all, we are an entertainment business to give customers the biggest bang for their buck while making memories for a lifetime. 
+    </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>Target customers range from kids (12-17) to adults changing the difficulty based upon the experience of the rafter.
+        With our competitive pricing, people of all stable financial situations can enjoy our services who want to enjoy the 
+    great outdoors. They want to gain experiences and memories through the joys of rafting. Other needs that we don't provide 
+kayaking or other forms of water transportation/recreation. Our audience will be able to access our site through any device. </p>
     <!-- change this -->
 
     <hr />
@@ -41,8 +47,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/495867-577399-bdd5ea-f7f7ff-fe5f55"
+      target="_blank">https://coolors.co/495867-577399-bdd5ea-f7f7ff-fe5f55</a>
 
     <table class="colors">
       <tr>
