--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -36,7 +36,7 @@ kayaking or other forms of water transportation/recreation. Our audience will be
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="images/R.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -60,9 +60,9 @@ kayaking or other forms of water transportation/recreation. Our audience will be
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
         <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="secondary">[#BDD5EA]</td>
+        <td class="accent1">[#FE5F55]</td>
+        <td class="accent2">[#577399]</td>
       </tr>
     </table>
 
@@ -72,11 +72,11 @@ kayaking or other forms of water transportation/recreation. Our audience will be
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Croissant One
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Oswald
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
