--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -59,10 +59,10 @@ kayaking or other forms of water transportation/recreation. Our audience will be
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
+        <td class="primary">[#577399]</td>
         <td class="secondary">[#BDD5EA]</td>
         <td class="accent1">[#FE5F55]</td>
-        <td class="accent2">[#577399]</td>
+        <td class="accent2">[#F7F7FF]</td>
       </tr>
     </table>
 
