--- a/Challenge/index.html
+++ b/Challenge/index.html
@@ -23,8 +23,9 @@
         </div>
     </main>
     <footer>
-        <p>Russel M. Nelson President of the Church of Jesus Christ of Latter-day Saints
-        </p>
+    <p>Russel M. Nelson</p>
+    <p>President of the Church of Jesus Christ of Latter-</p>
+    <p>day Saints</p>
     </footer>
 </body>
 </html>
