--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
 </head>
 <body>
-    <header> 
+    <div id="content">
+        <header> 
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
@@ -17,8 +19,8 @@
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
-    </header>
-    <div id="hero">
+        </header>
+        <div id="hero">
         <div id="hero-box">
             <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
@@ -29,8 +31,8 @@
                 <a class="book" href="contactus.html">Book Now</a>
             </div>
         </section>
-    </div> 
-    <main class="home-grid">
+        </div> 
+        <main class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
@@ -46,28 +48,30 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
             <a class="join" href="rivers.html">Join Us</a>
         </section>
-    </main>
-    <footer>
+        </main>
+        <footer>
         <p>Dry Oar &copy; 2023 - Trey Armstrong</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
+            <a href="https://facebook.com" target="blank">
+                <img src="images/facebook.png " alt="fb icon">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="blank">
             <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
