--- a/wwr/index.html
+++ b/wwr/index.html
@@ -39,7 +39,7 @@
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="camping-card" src="images/camping.jpg" alt="tent in mountains">
+            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
