--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="aboutme/index.html">About Me Page</a>
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-        <a href="wwr/positioning activity/positioning.html">Positioning Activity</a>
+        <a href="positioning activity/positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
         <a href="#">Personal Siteplan</a>
     </nav>
