--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="content">
-        <header> 
+    <header> 
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
@@ -19,20 +19,20 @@
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
-        </header>
-        <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
-        </div>
+    </header>
+     <div id="hero">
+            <div id="hero-box">
+             <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+            </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Dry Oar</h4>
             <div class="button-box">
-                <a class="book" href="contactus.html">Book Now</a>
+                <a class="book" href="rates.html">Book Now</a>
             </div>
         </section>
-        </div> 
-        <main class="home-grid">
+     </div> 
+    <main class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
@@ -55,19 +55,19 @@
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
             <a class="join" href="rivers.html">Join Us</a>
         </section>
-        </main>
+    </main>
         <footer>
         <p>Dry Oar &copy; 2023 - Trey Armstrong</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com" target="blank">
+            <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png " alt="fb icon">
             </a>
-            <a href="https://twitter.com" target="blank">
+            <a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com" target="blank">
+            <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
