--- a/sewing/site-plan.html
+++ b/sewing/site-plan.html
@@ -50,7 +50,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">[#aaba99]</td><td class="secondary">[#c3c3f3]</td><td class="accent1">[Navy]</td><td class="accent2">[#E6A9EC]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -61,10 +61,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: "Agbalumo"  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: "Playpen Sans", "Roboto Slab", "rubik"  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -87,8 +87,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Products</a>
+        <a href="#">Contact Us</a>
       </nav>
       <hr>
       <h2>
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Products <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Contact Us  <!-- change this -->
         </div>
 
         <div class="top">
