--- a/sewing/site-plan.html
+++ b/sewing/site-plan.html
@@ -9,8 +9,8 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
+      <h1>Sewing Site Plan</h1>
+      <h2>Trey Armstrong</h2>
       <h2>WDD 130-[section]</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
