Uploading wireframe image

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -126,6 +126,7 @@ kayaking or other forms of water transportation/recreation. Our audience will be
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
+    <img src="images/page2wireframe.png">
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
