Adding Photos, Completeing content section, and adding html.

--- a/sewing/site-plan.html
+++ b/sewing/site-plan.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Sewing Site Plan</h1>
       <h2>Trey Armstrong</h2>
-      <h2>WDD 130-[section]</h2>
+      <h2>WDD 130-C</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -124,29 +124,56 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+       The header will be small with the logo and the navigation links to give customers the greater focus on a couple items in three proction sections that we produce. 
+       This home webpage's goal for my personal website will immediately be to immediately introduce customers to the sewing products and services that we provide and then 
+       give further information about the company as they desire. 
+        Further down the page will show the creator of the products, some context on who they are, and their interests. Next will be our business's vision
+        and goals in providing quality services and products to every customer we come in contact with. 
+        Finally, the footer will have a link to the ContactUs page and links to each respective social media account. 
+
+      </p>
+      <p>
+        About the Seamstress
+Elizabeth Armstrong: wife, cashier, and independent seamstress enjoys the craft of creating beautiful clothing, using quality fabrics, and making adjustments to your needs. 
+Beginning her experience since the young age of 14, she has grown to become a well-respected seamstress. Her creations include Disney Princess dresses, halloween costumes, 
+skirts, shirts, and the list goes on. Though she is still new to the community, she is eager to learn more and accepting new challenges. Learn more about Elizabeth and her 
+at her Facebook Page!
+      </p>
+      <p>
+        Our Vision
+Creating products that allow a customer's creativity to set the bar while still maintaining well fitting designs and saving money in your wallet. Contact us so we can 
+help you on your next outfit/project!
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="Images/DSC_3788.jpg" alt="image for homepage">
+        <img src="Images/sewingmachine.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Products</h3>
       <p>
-        [Written copy for the Page 2 here]
+        This link from the home page will direct customers to the products and services we provide with full inventory in three sections:
+        clothing, Fabrics, and adjustments. With boxes that display each respective product and their estimated price, this will give customers visual
+        ease in seeing which products we provide, how much it would cost for specific materials, and some examples of adjustments that the seamstress can do.
+        This will also make it easier to make adjustments to the index code when it comes to updating products on the page. I hope to eventually add a search bar
+        feature that will filter out specific products that a customer is looking for and make other options that don't apply to those filters to disappear. 
+
+        
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="Images/shirt.jpeg" alt="image for page">
+        <img src="Images/adjustments.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contact Information</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Page three will consist of the busiesses information like: email, phone number, social media outlets, etc. Until I am able to learn how to make 
+        submittal forms on the customers in which they can fill out and submit right then and there on the website, a simplified version of contact information
+        will have to suffice. I hope to learn how to do that so that the seamstress and myself can see requests and order forms that customers have made right there
+        on the website. Creating logins might be something to look into as well and how to do that securely. 
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="Images/sellingdress.jpg" alt="image for page3">
+        <img src="Images/emailing.jpeg" alt="image for page3">
 
       </ul>
       <hr>
