--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning activity/positioning.html">Positioning Activity</a>
-        <a href="#">Personal Website</a>
-        <a href="#">Personal Siteplan</a>
+        <a href="sewing/index.html">Personal Website</a>
+        <a href="sewing/site-plan.html">Personal Siteplan</a>
     </nav>
     <p>Trey Armstrong - WDD130</p>
 </body>
