--- a/sewing/index.html
+++ b/sewing/index.html
@@ -11,7 +11,7 @@
     <div id="content">
     <header> 
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/Sew Strong.png" alt="Sew Strong">
+            <img class="logo" src="Images/Sew Strong.png" alt="Sew Strong">
         </a>
         <nav>
             <a href="index.html">Home</a>
