--- a/sewing/index.html
+++ b/sewing/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/styles.css">
-    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <title>Personal Website | Sew Strong | Home</title>
 </head>
 <body>
     <div id="content">
