--- a/sewing/site-plan.html
+++ b/sewing/site-plan.html
@@ -156,6 +156,10 @@ help you on your next outfit/project!
         ease in seeing which products we provide, how much it would cost for specific materials, and some examples of adjustments that the seamstress can do.
         This will also make it easier to make adjustments to the index code when it comes to updating products on the page. I hope to eventually add a search bar
         feature that will filter out specific products that a customer is looking for and make other options that don't apply to those filters to disappear. 
+        There will be boxes in sets of 4 divided evenly throughtout the screen. This will give plenty of room between each product and price to then allow customers
+        to see what is available. As they scroll down they see more selections of the particular category until that section runs out of products. In order the products
+        will be clothing, fabrics, and then adjustments. This will allow customers to see all options on a singular page. I also hope to add a link at the top and bottom
+        of the page to easily navigate between sections.
 
         
       </p>
@@ -169,7 +173,9 @@ help you on your next outfit/project!
         Page three will consist of the busiesses information like: email, phone number, social media outlets, etc. Until I am able to learn how to make 
         submittal forms on the customers in which they can fill out and submit right then and there on the website, a simplified version of contact information
         will have to suffice. I hope to learn how to do that so that the seamstress and myself can see requests and order forms that customers have made right there
-        on the website. Creating logins might be something to look into as well and how to do that securely. 
+        on the website. Creating logins might be something to look into as well and how to do that securely. This page will, however, consist of several pictures 
+        showing purchasing of clothing and eventually a picture of an actual product we've sold. The types of contact methods I would like to put on the page are 
+        phone number, email, and social media accounts so if someone is interested and they want to see more content, they can do so on social media. 
       </p>
       <p>Images for the Page 3</p>
         <img src="Images/sellingdress.jpg" alt="image for page3">
