--- a/sewing/site-plan.html
+++ b/sewing/site-plan.html
@@ -135,7 +135,7 @@
       <p>
         About the Seamstress
 Elizabeth Armstrong: wife, cashier, and independent seamstress enjoys the craft of creating beautiful clothing, using quality fabrics, and making adjustments to your needs. 
-Beginning her experience since the young age of 14, she has grown to become a well-respected seamstress. Her creations include Disney Princess dresses, halloween costumes, 
+Beginning her experience since the young age of 17, she has grown to become a novice seamstress. Her creations include Disney Princess dresses, halloween costumes, 
 skirts, shirts, and the list goes on. Though she is still new to the community, she is eager to learn more and accepting new challenges. Learn more about Elizabeth and her 
 at her Facebook Page!
       </p>
