Adding Home wifeframe

--- a/sewing/site-plan.html
+++ b/sewing/site-plan.html
@@ -193,7 +193,7 @@ help you on your next outfit/project!
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="Images/Wireframe Home.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
