--- a/sewing/site-plan.html
+++ b/sewing/site-plan.html
@@ -191,17 +191,18 @@ help you on your next outfit/project!
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The Images below the subheadings of Clothing, Fabrics, and Adjustments will be corresponding pictures that match the subheading above them.
+        These images will match products on the Products page and have a link to their respective section on that page. 
       </p>
       <img src="Images/Wireframe Home.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Products</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Adjustments</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
