link to Home Wireframe

--- a/sewing/site-plan.html
+++ b/sewing/site-plan.html
@@ -193,6 +193,7 @@ help you on your next outfit/project!
       <p>         
         The Images below the subheadings of Clothing, Fabrics, and Adjustments will be corresponding pictures that match the subheading above them.
         These images will match products on the Products page and have a link to their respective section on that page. 
+        link for the wireframe: https://wireframe.cc/5lfUk5
       </p>
       <img src="Images/Wireframe Home.png" alt="home page wireframe">
 
