--- a/sewing/site-plan.html
+++ b/sewing/site-plan.html
@@ -199,9 +199,11 @@ help you on your next outfit/project!
 
       <h3>Products</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        Each image will be it's own product with their respective price and description to the right of it. 
+        This will give the consumer a look into what they might be purchasing, what it's made of, and time frame for it's creation.
+       link for the wireframe: https://wireframe.cc/9vOWTv
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="Images/Products Wireframe.png" alt="products wireframe">
 
       <h3>Adjustments</h3>
       <p>         
