Contact us wireframe

--- a/sewing/site-plan.html
+++ b/sewing/site-plan.html
@@ -205,11 +205,12 @@ help you on your next outfit/project!
       </p>
       <img src="Images/Products Wireframe.png" alt="products wireframe">
 
-      <h3>Adjustments</h3>
-      <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+      <h3>Contact Us</h3>
+      <p>    
+        The two images will be referencing delivery methods and stock customer satisfaction.     
+       link to the wireframe: https://wireframe.cc/Obfz9g 
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="Images/Contact Us Wireframe.png" alt="contact us wireframe">
     </main>
   </body>
 
