--- a/wwr/photoalbum.html
+++ b/wwr/photoalbum.html
@@ -25,30 +25,31 @@
                 <h2>River Rafting</h2>
             <img class="photo-img" src="images/raftingphoto1.jpg" alt="rafting photo 1">
             </section>
-            <section class="riv2">
+            <div id="riv2">
             <img class="photo-img" src="images/raftingphoto2.jpeg" alt="rafting photo 2">
-            </section>
+            </div>
             <section class="camp1">
                 <h2>Camping</h2>
                 <img class="photo-img" src="images/camping photo 1.jpg" alt="camping photo 1">
             </section>
-            <section class= "camp2">
+            <div id= "camp2">
                 <img class="photo-img" src="images/camping photo 2.jpg" alt="camping photo 2">
-            </section>
+            </div>
             <section class="nat1">
             <h2>Nature</h2>
             <img class="photo-img" src="images/nature1.jpg" alt="elk in river">
             </section>
-            <section class="nat2">
+            <div id="nat2">
                 <img class="photo-img" src="images/nature2.jpeg" alt="bear on riverbed">
-            </section>
+            </div>
         </main>
         <main class="dronemain">
             <img class="dronepic" src="images/drone.jpg" alt="picture of a drone next to a river">
             <section class="dronemoney">
             <h2>Drone Photography</h2>
             <p>We provide photographic and videographic drone services that can leave you and your family with
-            stunning images and videos for long lasting memories! We only use the highest quality of drones to provide smooth video quality, maximum video/photography time, and </p>
+            stunning images and videos for long lasting memories! We only use the highest quality of drones to 
+            provide smooth video quality, maximum video/photography time, and maximum storage capacity.</p>
             <p> Find out more information by hitting the link below!</p>
             <a class="contactus" href="Contactus.html">Contact Us</a>
             </section>
