HTML & CSS for Main page

--- a/sewing/index.html
+++ b/sewing/index.html
@@ -15,38 +15,36 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Products</a>
-            <a href="#">Contact Us</a>
+            <a href="products.html">Products</a>
+            <a href="contactussewing.html">Contact Us</a>
         </nav>
     </header>
-     <div id="hero">
-            <div id="hero-box">
-             <img id="hero-img" src="#" alt="#">
-            </div>
-        <section id="hero-msg">
-            <h1 class="home-title">Product Examples</h1>
-            <h4>Make Memories with Dry Oar</h4>
-        </section>
-     </div> 
-    <main class="home-grid">
-        <section class="rivers-card">
-            <img class="card-img" src="#" alt="Clothing">
-            <img class="icon" src="#" alt="Clothing Products">
+    <main class="clothing-grid">
+        <section class="riv1">
             <h2>Clothing</h2>
+        <img class="photo-img" src="Images/shirt.jpeg" alt="Clothing Image 1">
         </section>
-        <section class="camping-card">
-            <img class="card-img" src="#" alt="Fabrics">
-            <img class="icon" src="#" alt="Fabric Examples">
+        <div id="riv2">
+        <img class="photo-img" src="Images/shirt.jpeg" alt="Clothing Image 2">
+        </div>
+        <section class="camp1">
             <h2>Fabrics</h2>
+            <img class="photo-img" src="Images/Blue Fabric.jpeg" alt="Fabric Image 1">
         </section>
-        <section class="rapids-card">
-            <img class="card-img" src="#" alt="Adjustments">
-            <img class="icon" src="#" alt="Adjustment Examples">
-            <h2>Adjustments</h2>
+        <div id= "camp2">
+            <img class="photo-img" src="Images/Green Fabric.jpeg" alt="Fabric Image 2">
+        </div>
+        <section class="nat1">
+        <h2>Adjustments</h2>
+        <img class="photo-img" src="Images/Adjustment 1.jpg" alt="elk in river">
         </section>
-        <div id="background"></div>
-        <img class="mountains" src="Images/DSC_3788.jpg" alt="About the Creator">
+        <div id="nat2">
+            <img class="photo-img" src="Images/Adjustment 2.jpg" alt="bear on riverbed">
+        </div>
+    </main>
+    <submain class="submain">
         <section class="msg">
+            <img class="mountains" src="Images/DSC_3788.jpg" alt="About the Creator">
             <h2>About the Seamstress</h2>
             <p>Elizabeth Armstrong: wife, cashier, and independent seamstress
                 enjoys the craft of creating beautiful clothing, using quality fabrics, 
@@ -56,10 +54,11 @@
         community, she is eager to learn more and accepting new challenges. Learn more about Elizabeth and her 
         at her Facebook Page!</p>
             <a class="join" href="https://facebook.com">Facebook Page</a>
-        </section>
-        <div id="background2"></div>
-        <img class="mountains" src="Images/sewingmachine.jpg" alt="About the Business">
-        <section class="msg">
+                  </section>
+    </submain>
+    <finalmain class="finalmain">
+        <div id="background2">
+        <section class="msg1">
             <h2>Our Vision</h2>
             <p>Creating products that allow a customer's creativity to set the bar 
                 while still maintaining well fitting designs and saving money in your wallet. 
@@ -67,7 +66,8 @@
             </p>
             <a class="join" href="contactus.html">Contact Us</a>
         </section>
-    </main>
+    </div>
+</finalmain>
         <footer>
         <p>Sew Strong &copy; 2023 - Trey Armstrong</p>
         <p><a href="#">Products</a></p>
