--- a/sewing/index.html
+++ b/sewing/index.html
@@ -22,17 +22,17 @@
     <main class="clothing-grid">
         <section class="riv1">
             <h2>Clothing</h2>
-        <img class="photo-img" src="Images/shirt.jpeg" alt="Clothing Image 1">
+        <img class="photo-img" src="Images/Green Dress.jpg" alt="Clothing Image 1">
         </section>
         <div id="riv2">
-        <img class="photo-img" src="Images/shirt.jpeg" alt="Clothing Image 2">
+        <img class="photo-img" src="Images/Baby Clothes Main.jpg" alt="Clothing Image 2">
         </div>
         <section class="camp1">
             <h2>Fabrics</h2>
             <img class="photo-img" src="Images/Blue Fabric.jpeg" alt="Fabric Image 1">
         </section>
         <div id= "camp2">
-            <img class="photo-img" src="Images/Green Fabric.jpeg" alt="Fabric Image 2">
+            <img class="photo-img" src="Images/Pink Fabric.jpg" alt="Fabric Image 2">
         </div>
         <section class="nat1">
         <h2>Adjustments</h2>
