--- a/sewing/index.html
+++ b/sewing/index.html
@@ -70,8 +70,8 @@
 </finalmain>
         <footer>
         <p>Sew Strong &copy; 2023 - Trey Armstrong</p>
-        <p><a href="#">Products</a></p>
-        <p><a href="#">Contact Us</a></p>
+        <p><a href="products.html">Products</a></p>
+        <p><a href="contactussewing.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="Images/facebook.png" alt="fb icon">
