--- a/sewing/products.html
+++ b/sewing/products.html
@@ -28,16 +28,20 @@
         <img class="product-img" src="Images/Green Dress.jpg" alt="Clothing Image 1">
         </section>
         <div id="textp">
-            <p>Price: $$$
-                Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+            <p>Price: $50</p>
+            <p>
+                Description: A pink lace fabric over a matching pink satin fabric. 
+                Sizing can be adjusted to customer needs. Other colors are availble based on stock. 
             </p>
         </div>
         <div id="dress2">
         <img class="product-img" src="Images/Nicedress.jpg" alt="Clothing Image 2">
         </div>
         <div id="textp1">
-            <p>Price: $$$
-                Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+            <p>Price: $35</p>
+            <p>
+                Description: A green jersy knit fabric styled to be cute and comfortable!
+                Other colors are available upon request and availability.
             </p>
         </div>
         <section class="skirt1">
@@ -45,16 +49,20 @@
             <img class="product-img" src="Images/Skirt 1.jpg" alt="Skirt Image 1">
         </section>
         <div id="text">
-            <p>Price: $$$
-                Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+            <p>Price: $30</p>
+            <p>
+                Description: A simple design with a comfort, elastic waist to fit almost any size.
+                The fabric is a stretchy cotton with many color selections.
             </p>
             </div>
         <div id= "skirt2">
             <img class="product-img" src="Images/Red Skirt.webp" alt="Skirt Image 2">
         </div>
         <div id="textp2">
-            <p>Price: $$$
-                Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+            <p>Price: $30</p>
+            <p>
+                Description: A non-stretch skirt that provides style and unique to spice up your outfits.
+                The fabric can be either a satin or cotton based upon customer request with several color options. 
             </p>
         </div>
         <section class="shirt1">
@@ -62,16 +70,20 @@
         <img class="product-img" src="Images/shirt.jpeg" alt="Shirt 1">
         </section>
         <div id="textp3">
-            <p>Price: $$$
-                Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+            <p>Price: $10-$15</p>
+            <p>
+                Description: A simple T-shirt with a variety of colors and a cheap price tag.
+                The fabric can range from cotton to polyester. Pricing may vary based upon fabric request and sizing. 
             </p>
         </div>
         <div id="shirt2">
             <img class="product-img" src="Images/Cream Blouse.jpeg" alt="Shirt 2">
         </div>
         <div id="textp4a">
-            <p>Price: $$$
-                Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+            <p>Price: $35</p>
+            <p>
+                Description: This gorgeous jersey knit with an organza overlay will bedazzle your outfits to 
+                make you stand out in the crowd. A few color selections are available though typcial colors include black or white.
             </p>
         </div>
         <section class="baby">
@@ -79,23 +91,119 @@
             <img class="product-img" src="Images/Baby Clothes Main.jpg" alt="Baby Clothes 1">
             </section>
             <div id="textp4">
-                <p>Price: $$$
-                    Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
-                </p>
+                <p>Price: $20</p>
+            <p>
+                Description: An adorble, formal look for your baby/toddler that will make all of your friends adore your little one.
+                With several colors of suspenders and bow ties available, this flexible cotton and polyester mesh will keep your child comfortable
+                and stylish. 
+            </p>
             </div>
             <div id="baby2">
-                <img class="product-img" src="Images/Adjustment 2.jpg" alt="Baby Clothes 2">
+                <img class="product-img" src="Images/Baby clothes girl.webp" alt="Baby Clothes 2">
             </div>
             <div id="textp5">
-                <p>Price: $$$
-                    Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
+                <p>Price: $25</p>
+                <p>
+                    Description: A onesie, skirt, and bow to match the set for your little princess!
+                    A variety of patterns and colors are available at a reasonable price.
                 </p>
             </div>
     </main>
+    <div class="title-products">
+        <a>Fabrics</a>
+    </div>
+    <main class="pclothing-grid2">
+        <section class="dress1">
+        <img class="product-img" src="Images/Green Fabric.jpeg" alt="Green fabric">
+        </section>
+        <div id="textp">
+            <p>Price: $20 per yard</p>
+            <p>
+                Description: An allway-stretch, rose-gold, sequins fabric that would be great for party dresses and tops.
+            </p>
+        </div>
+        <div id="dress2">
+        <img class="product-img" src="Images/Sequin Fabric.jpg" alt="Sequin fabric">
+        </div>
+        <div id="textp1">
+            <p>Price: $12 per yard</p>
+            <p>
+                Description: A shiny, green, satin that can be used for your favorite dresses and costumes!
+            </p>
+        </div>
+        <section class="skirt1">
+            <img class="product-img" src="Images/Blue Fabric.jpeg" alt="Blue Fabric">
+        </section>
+        <div id="text">
+            <p>Price: $12 per yard</p>
+            <p>
+                Description: A matte, blue, satin that can be used for your favorite dresses and costumes!
+            </p>
+            </div>
+        <div id= "skirt2">
+            <img class="product-img" src="Images/Butterfly Fabric.jpg" alt="Butterfly Fabric">
+        </div>
+        <div id="textp2">
+            <p>Price: $30 per yard</p>
+            <p>
+                Description: A Black & White Butterfly Embroidered Lace Fabric that can be used for a variety of clothing options
+                or apliques. 
+                     </p>
+        </div>
+        <section class="shirt1">
+        <img class="product-img" src="Images/Mushroom Fabric.jpg" alt="Mushroom Fabric">
+        </section>
+        <div id="textp3">
+            <p>Price: $15 per yard</p>
+            <p>
+                Description: An adorable pattern that is typically used for baby clothing and blankets.
+                        </p>
+        </div>
+        <div id="shirt2">
+            <img class="product-img" src="Images/Pink Fabric.jpg" alt="Pink Fabric">
+        </div>
+        <div id="textp4a">
+            <p>Price: $22 par yard</p>
+            <p>
+                Description: A pink floral embroidered lace usally used for formal dresses for proms, homecomings, and special events!
+            </p>
+        </div>
+        <section class="baby">
+            <img class="product-img" src="Images/Plaid Fabric.jpg" alt="Plaid Fabric">
+            </section>
+            <div id="textp4">
+                <p>Price: $12 per yard</p>
+            <p>
+                Description: A brown flannel fabric that can be used for tops, skirts, or blankets. 
+            </p>
+            </div>
+            <div id="baby2">
+                <img class="product-img" src="Images/Raccons and Bear Fabric.jpg" alt="Baby Fabric">
+            </div>
+            <div id="textp5">
+                <p>Price: $12 per yard</p>
+            <p>
+                Description: A cute baby design made from a flannel fabric that is typically used for baby blankets or swaddles.
+            </p>
+            </div>
+    </main>
+    <div class="title-products">
+        <a>Adjustments</a>
+    </div>
+    <main class="Adjustments">
+        <Section class="AdjustmentsS">
+        <img src="Images/Adjustment 2.jpg" alt="Adjustments Photo 2">
+        <img src="Images/Adjustment 1.jpg" alt="Ajustments Photo 1">
+        <p>Clothing Adjustments help take any style of clothing and adjusting or modyfing it to the customer's desires.
+            Pricing varies for the type of fabric and the style it is being adjusted too. Contact us for more information.
+        </p>
+        <a class="join" href="contactussewing.html">Contact Us</a>
+                  </section>
+    </main>
     <footer>
         <p>Sew Strong &copy; 2023 - Trey Armstrong</p>
-        <p><a href="#">Products</a></p>
-        <p><a href="#">Contact Us</a></p>
+        <p><a href="products.html">Products</a></p>
+        <p><a href="contactussewing.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="Images/facebook.png" alt="fb icon">
