--- a/sewing/contactussewing.html
+++ b/sewing/contactussewing.html
@@ -146,7 +146,6 @@ button {
             document.body.classList.toggle('moveDown');
         });
     </script>
-</body>
 <footer>
     <p>Sew Strong &copy; 2023 - Trey Armstrong</p>
     <p><a href="products.html">Products</a></p>
@@ -163,3 +162,5 @@ button {
         </a>
     </div>
     </footer>
+</body>
+</html>
