fixing spacing on images

--- a/sewing/products.html
+++ b/sewing/products.html
@@ -11,7 +11,7 @@
     <div id="content">
     <header> 
         <a id="logo_link" href="index.html">
-            <img class="logo" src="Images/Sew Strong.png" alt="Sew Strong">
+            <img class="logo" src="Images/SewStrong.png" alt="Sew Strong">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
     <main class="pclothing-grid">
         <section class="dress1">
             <h2>Dresses</h2>
-        <img class="product-img" src="Images/Green Dress.jpg" alt="Clothing Image 1">
+        <img class="product-img" src="Images/GreenDress.jpg" alt="Clothing Image 1">
         </section>
         <div id="textp">
             <p>Price: $50</p>
@@ -46,7 +46,7 @@
         </div>
         <section class="skirt1">
             <h2>Skirts</h2>
-            <img class="product-img" src="Images/Skirt 1.jpg" alt="Skirt Image 1">
+            <img class="product-img" src="Images/Skirt1.jpg" alt="Skirt Image 1">
         </section>
         <div id="text">
             <p>Price: $30</p>
@@ -56,7 +56,7 @@
             </p>
             </div>
         <div id= "skirt2">
-            <img class="product-img" src="Images/Red Skirt.webp" alt="Skirt Image 2">
+            <img class="product-img" src="Images/RedSkirt.webp" alt="Skirt Image 2">
         </div>
         <div id="textp2">
             <p>Price: $30</p>
@@ -77,7 +77,7 @@
             </p>
         </div>
         <div id="shirt2">
-            <img class="product-img" src="Images/Cream Blouse.jpeg" alt="Shirt 2">
+            <img class="product-img" src="Images/CreamBlouse.jpeg" alt="Shirt 2">
         </div>
         <div id="textp4a">
             <p>Price: $35</p>
@@ -88,7 +88,7 @@
         </div>
         <section class="baby">
             <h2>Baby</h2>
-            <img class="product-img" src="Images/Baby Clothes Main.jpg" alt="Baby Clothes 1">
+            <img class="product-img" src="Images/BabyClothesMain.jpg" alt="Baby Clothes 1">
             </section>
             <div id="textp4">
                 <p>Price: $20</p>
@@ -99,7 +99,7 @@
             </p>
             </div>
             <div id="baby2">
-                <img class="product-img" src="Images/Baby clothes girl.webp" alt="Baby Clothes 2">
+                <img class="product-img" src="Images/Babyclothesgirl.webp" alt="Baby Clothes 2">
             </div>
             <div id="textp5">
                 <p>Price: $25</p>
@@ -114,7 +114,7 @@
     </div>
     <main class="pclothing-grid2">
         <section class="dress1">
-        <img class="product-img" src="Images/Green Fabric.jpeg" alt="Green fabric">
+        <img class="product-img" src="Images/GreenFabric.jpeg" alt="Green fabric">
         </section>
         <div id="textp">
             <p>Price: $20 per yard</p>
@@ -123,7 +123,7 @@
             </p>
         </div>
         <div id="dress2">
-        <img class="product-img" src="Images/Sequin Fabric.jpg" alt="Sequin fabric">
+        <img class="product-img" src="Images/SequinFabric.jpg" alt="Sequin fabric">
         </div>
         <div id="textp1">
             <p>Price: $12 per yard</p>
@@ -132,7 +132,7 @@
             </p>
         </div>
         <section class="skirt1">
-            <img class="product-img" src="Images/Blue Fabric.jpeg" alt="Blue Fabric">
+            <img class="product-img" src="Images/BlueFabric.jpeg" alt="Blue Fabric">
         </section>
         <div id="text">
             <p>Price: $12 per yard</p>
@@ -141,7 +141,7 @@
             </p>
             </div>
         <div id= "skirt2">
-            <img class="product-img" src="Images/Butterfly Fabric.jpg" alt="Butterfly Fabric">
+            <img class="product-img" src="Images/ButterflyFabric.jpg" alt="Butterfly Fabric">
         </div>
         <div id="textp2">
             <p>Price: $30 per yard</p>
@@ -151,7 +151,7 @@
                      </p>
         </div>
         <section class="shirt1">
-        <img class="product-img" src="Images/Mushroom Fabric.jpg" alt="Mushroom Fabric">
+        <img class="product-img" src="Images/MushroomFabric.jpg" alt="Mushroom Fabric">
         </section>
         <div id="textp3">
             <p>Price: $15 per yard</p>
@@ -160,7 +160,7 @@
                         </p>
         </div>
         <div id="shirt2">
-            <img class="product-img" src="Images/Pink Fabric.jpg" alt="Pink Fabric">
+            <img class="product-img" src="Images/PinkFabric.jpg" alt="Pink Fabric">
         </div>
         <div id="textp4a">
             <p>Price: $22 par yard</p>
@@ -169,7 +169,7 @@
             </p>
         </div>
         <section class="baby">
-            <img class="product-img" src="Images/Plaid Fabric.jpg" alt="Plaid Fabric">
+            <img class="product-img" src="Images/PlaidFabric.jpg" alt="Plaid Fabric">
             </section>
             <div id="textp4">
                 <p>Price: $12 per yard</p>
@@ -178,7 +178,7 @@
             </p>
             </div>
             <div id="baby2">
-                <img class="product-img" src="Images/Raccons and Bear Fabric.jpg" alt="Baby Fabric">
+                <img class="product-img" src="Images/RacconsandBearFabric.jpg" alt="Baby Fabric">
             </div>
             <div id="textp5">
                 <p>Price: $12 per yard</p>
@@ -192,8 +192,8 @@
     </div>
     <main class="Adjustments">
         <Section class="AdjustmentsS">
-        <img src="Images/Adjustment 2.jpg" alt="Adjustments Photo 2">
-        <img src="Images/Adjustment 1.jpg" alt="Ajustments Photo 1">
+        <img src="Images/Adjustment2.jpg" alt="Adjustments Photo 2">
+        <img src="Images/Adjustment1.jpg" alt="Ajustments Photo 1">
         <p>Clothing Adjustments help take any style of clothing and adjusting or modyfing it to the customer's desires.
             Pricing varies for the type of fabric and the style it is being adjusted too. Contact us for more information.
         </p>
