--- a/sewing/index.html
+++ b/sewing/index.html
@@ -42,7 +42,7 @@
             <img class="photo-img" src="Images/Adjustment2.jpg" alt="bear on riverbed">
         </div>
     </main>
-    <submain class="submain">
+    <div class="submain">
         <section class="msg">
             <img class="mountains" src="Images/DSC_3788.jpg" alt="About the Creator">
             <h2>About the Seamstress</h2>
@@ -55,8 +55,8 @@
         at her Facebook Page!</p>
             <a class="join" href="https://facebook.com">Facebook Page</a>
                   </section>
-    </submain>
-    <finalmain class="finalmain">
+                </div>
+    <div class="finalmain">
         <div id="background2">
         <section class="msg1">
             <h2>Our Vision</h2>
@@ -67,7 +67,7 @@
             <a class="join" href="contactus.html">Contact Us</a>
         </section>
     </div>
-</finalmain>
+</div>
         <footer>
         <p>Sew Strong &copy; 2023 - Trey Armstrong</p>
         <p><a href="products.html">Products</a></p>
