--- a/sewing/contactussewing.html
+++ b/sewing/contactussewing.html
@@ -108,7 +108,7 @@ button {
             Any adjustments made to clothing will be variable based upon the difficulty of the adjustment and the type
              of fabric. An email/phone call response will occur to specify any details and updates needed. </p>
     </main>
-    <main class="home-grid">
+    <div class="home-grid">
         <form action="/my-handling-form-page" method="post">
             <ul>
                 <li>
@@ -128,7 +128,7 @@ button {
                   </li>
               </ul>
         </form>
-    </main>
+    </div>
     <script>
         // get the feedback div element so we can do something with it.
         const feedbackElement = document.getElementById('feedback');
@@ -162,5 +162,6 @@ button {
         </a>
     </div>
     </footer>
+    </div>
 </body>
 </html>
