--- a/sewing/products.html
+++ b/sewing/products.html
@@ -23,10 +23,10 @@
         <a>Clothing</a>
     </div>
     <main class="pclothing-grid">
-        <section class="dress1">
+        <div class="dress1">
             <h2>Dresses</h2>
         <img class="product-img" src="Images/GreenDress.jpg" alt="Clothing Image 1">
-        </section>
+        </div>
         <div id="textp">
             <p>Price: $50</p>
             <p>
@@ -44,10 +44,10 @@
                 Other colors are available upon request and availability.
             </p>
         </div>
-        <section class="skirt1">
+        <div class="skirt1">
             <h2>Skirts</h2>
             <img class="product-img" src="Images/Skirt1.jpg" alt="Skirt Image 1">
-        </section>
+        </div>
         <div id="text">
             <p>Price: $30</p>
             <p>
@@ -65,10 +65,10 @@
                 The fabric can be either a satin or cotton based upon customer request with several color options. 
             </p>
         </div>
-        <section class="shirt1">
+        <div class="shirt1">
         <h2>Shirts</h2>
         <img class="product-img" src="Images/shirt.jpeg" alt="Shirt 1">
-        </section>
+        </div>
         <div id="textp3">
             <p>Price: $10-$15</p>
             <p>
@@ -86,10 +86,10 @@
                 make you stand out in the crowd. A few color selections are available though typcial colors include black or white.
             </p>
         </div>
-        <section class="baby">
+        <div class="baby">
             <h2>Baby</h2>
             <img class="product-img" src="Images/BabyClothesMain.jpg" alt="Baby Clothes 1">
-            </section>
+        </div>
             <div id="textp4">
                 <p>Price: $20</p>
             <p>
@@ -112,10 +112,10 @@
     <div class="title-products">
         <a>Fabrics</a>
     </div>
-    <main class="pclothing-grid2">
-        <section class="dress1">
+    <div class="pclothing-grid2">
+        <div class="dress1">
         <img class="product-img" src="Images/GreenFabric.jpeg" alt="Green fabric">
-        </section>
+        </div>
         <div id="textp">
             <p>Price: $20 per yard</p>
             <p>
@@ -150,9 +150,9 @@
                 or apliques. 
                      </p>
         </div>
-        <section class="shirt1">
+        <div class="shirt1">
         <img class="product-img" src="Images/MushroomFabric.jpg" alt="Mushroom Fabric">
-        </section>
+        </div>
         <div id="textp3">
             <p>Price: $15 per yard</p>
             <p>
@@ -168,9 +168,9 @@
                 Description: A pink floral embroidered lace usally used for formal dresses for proms, homecomings, and special events!
             </p>
         </div>
-        <section class="baby">
+        <div class="baby">
             <img class="product-img" src="Images/PlaidFabric.jpg" alt="Plaid Fabric">
-            </section>
+        </div>
             <div id="textp4">
                 <p>Price: $12 per yard</p>
             <p>
@@ -186,19 +186,21 @@
                 Description: A cute baby design made from a flannel fabric that is typically used for baby blankets or swaddles.
             </p>
             </div>
-    </main>
+        </div>
+    </div>
     <div class="title-products">
         <a>Adjustments</a>
     </div>
-    <main class="Adjustments">
-        <Section class="AdjustmentsS">
+    <div class="Adjustments">
+        <div class="AdjustmentsS">
         <img src="Images/Adjustment2.jpg" alt="Adjustments Photo 2">
         <img src="Images/Adjustment1.jpg" alt="Ajustments Photo 1">
         <p>Clothing Adjustments help take any style of clothing and adjusting or modyfing it to the customer's desires.
             Pricing varies for the type of fabric and the style it is being adjusted too. Contact us for more information.
         </p>
         <a class="join" href="contactussewing.html">Contact Us</a>
-                  </section>
+        </div>
+    </div>
     </main>
     <footer>
         <p>Sew Strong &copy; 2023 - Trey Armstrong</p>
